atualização dos componentes

--- a/DocumentacaoGeral/Relatório_Componente15_MapaKarnaugh/desktop.ini
+++ b/DocumentacaoGeral/Relatório_Componente15_MapaKarnaugh/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Captura de tela 2024-12-08 193241.png=@Captura de tela 2024-12-08 193241,0
+Captura de tela 2024-12-12 095904.png=@Captura de tela 2024-12-12 095904,0
