--- a/DocumentacaoGeral/Relatório_Componente17_DetectorPrimo/desktop.ini
+++ b/DocumentacaoGeral/Relatório_Componente17_DetectorPrimo/desktop.ini
@@ -2,3 +2,4 @@
 Captura de tela 2024-12-08 194300.png=@Captura de tela 2024-12-08 194300,0
 Captura de tela 2024-12-08 194553.png=@Captura de tela 2024-12-08 194553,0
 Captura de tela 2024-12-08 194308.png=@Captura de tela 2024-12-08 194308,0
+Captura de tela 2024-12-12 094228.png=@Captura de tela 2024-12-12 094228,0
